--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -87,7 +87,11 @@ body{
 }
 .container1{
   margin: 0 auto;
-  max-width: 87%;
+  max-width: 80%;
+}
+.container2{
+  margin: 0 auto;
+  max-width: 90%;
 }
 .nav_tabs{
   list-style: none;
@@ -136,9 +140,12 @@ body{
   display: inline-block;
   vertical-align: top;
   background-color: white;
-  padding: 2% 7% 10% 7%;
-  height: 500px;
-  float: right !important;
+  margin: 0% 0% 5% 0%;
+  width:100%;
+  min-height: 500px;
+  height:auto;
+  overflow: auto;
+
 }
 .canvas_contain2{
   display: inline-block;
@@ -180,14 +187,15 @@ body{
   height: 300px;
   float:left;
   display:inline;
+  margin-top: 100px;
 
 }
 .twoChart2{
-  width: 500px;
+  width: 450px;
   height: 300px;
   float:left;
   display:inline;
-  padding-left: 100px;
+
 
 }
 .twoChart{
@@ -203,13 +211,14 @@ body{
   border-bottom: 1px solid #dddddd;
 }
 .contain_group1,.contain_group2,.contain_group3,.contain_group4{
-  float:right !important;
-  width: 90%;
+
+  margin-top:2%;
+  margin-bottom: 2%;
 }
 .contain_map{
-  padding-left: 5%;
+  padding-left: 10%;
   padding-top: 5%;
-  width:60%;
+  width:65%;
   float: left;
 }
 .contain_rank{
@@ -218,14 +227,14 @@ body{
 
 }
 .contain_block1{
-  margin: 2% 15% 2% 15%;
-  width: 90%;
+  margin: 2% 10% 2% 15%;
+  width: 80%;
   height: 500px;
   background-color: white;
 }
 .contain_block2{
-  margin: 2% 15% 10% 15%;
-  width: 90%;
+  margin: 2% 10% 10% 15%;
+  width: 80%;
   height: auto;
   min-height: 500px;
   background-color: white;
@@ -234,11 +243,14 @@ body{
 }
 .contain_time{
   padding-top: 5%;
-  padding-left: 50%;
+  padding-left:50%;
 
 }
 .contain_weather{
 
-  padding-top: 5%;
+  padding-top: 15.8%;
   padding-left:5%;
+}
+.main{
+  margin:20px;
 }
