修改界面完毕！

--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -155,7 +155,7 @@ html(class="no-js", lang="")
               option(value="2012") 2015
               option(value="2012") 2016
           div(id='container',style='min-width:400px;height:400px')
-        div(class='table_contain2 col-lg-10',id='brand_table')
+        div(class='canvas_contain col-lg-10',id='brand_table')
           .row
             .col-md-12
               .block-flat
