--- a/src/public/css/tablestyle.css
+++ b/src/public/css/tablestyle.css
@@ -5135,6 +5135,7 @@ body.modal-open,
 }
 .block-flat,
 .block-wizard {
+  margin-top: 30px;
   margin-bottom: 40px;
   padding: 20px 20px;
   background: #FFF;
