--- a/src/views/future.jade
+++ b/src/views/future.jade
@@ -1,15 +1,18 @@
+---
 component: FuturePage
+---
 doctype html
 html(lang="en")
   head
     meta(charset="utf-8")
     meta(http-equiv="x-ua-compatible", content="ie=edge")
-    title= tendency
+    title= title
     meta(name="description", description=description)
     meta(name="viewport", content="width=device-width, initial-scale=1")
-    script(src = "lib/exporting.js")
-    script(src="lib/highcharts.js")
-    script(src="js/PercentagePile.js")
+    link(rel="stylesheet" type="text/css" href="css/style.css")
+    link(href="lib/bootstrap.css",rel="stylesheet")
+    link(rel="stylesheet" ,type="text/css" ,href="css/tablestyle.css")
+    script(src = "lib/jquery.js")
   body
-    div(id='container',style='min-width:400px;height:400px')
+    h1 hello world!
 
