modify the tag of index page

--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -34,7 +34,7 @@ html(class="no-js", lang="")
         ul(class=["nav","navbar-nav","navbar-right","user-nav"])
           li(class=["dropdown","profile_menu"])
             a(href="#",class="dropdown-toggle",data-toggle="dropdown")
-              span.name Jane Smith
+              span.name 非常5+1
             ul.dropdown-menu
               li
                 a 我的账号
