--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -151,13 +151,15 @@ html(class="no-js", lang="")
 
           .contain_title
             span 各类目销售量占比及变化趋势
-          label.yearSelect
-            select.selection#cbselection
-              option(value="2012") 2012
-              option(value="2012") 2013
-              option(value="2012") 2014
-              option(value="2012") 2015
-              option(value="2012") 2016
+          label#yearSelect3.yearSelect
+            select#yearselection3.selection
+              each itemy3 in year
+                option(value=itemy3) #{itemy3}
+          label#monthSelect3.yearSelect
+            select#monthselection3.selection
+              each itemm3 in month
+                option(value=itemm3) #{itemm3}
+          #submit3.submitBtn 生成
           div(id='container',style='min-width:400px;height:400px')
         div(class='canvas_contain col-lg-10',id='cbrand_table')(style='display:none')
           .row
@@ -183,36 +185,9 @@ html(class="no-js", lang="")
                           th 10月
                           th 11月
                           th 12月
-                      tbody
+                      tbody#tbody2
                         tr(class=["odd", "gradeX"])
                           td 1.洗发沐浴/个人清洁
-                          td Internet Explorer 4.0
-                          td Win 95+
-                          td Win 95+
-                          td Win 95+
-                          td Win 95+
-                          td Win 95+
-                          td Win 95+
-                          td Win 95+
-                          td Win 95+
-                          td Win 95+
-                          td Win 95+
-                          td Win 95+
-                        tr(class=["odd", "gradeX"])
-                          td 1.洗发沐浴/个人清洁
-                          td Internet Explorer 4.0
-                          td Win 95+
-                          td Win 95+
-                          td Win 95+
-                          td Win 95+
-                          td Win 95+
-                          td Win 95+
-                          td Win 95+
-                          td Win 95+
-                          td Win 95+
-                          td Win 95+
-                          td Win 95+
-
 
       div(class=['contain_group1'])(style='display:none')
         div(class='canvas_contain col-lg-10',id='fristCanvas')
