--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -17,7 +17,7 @@ body{
 }
 .title{
   font-weight: 600;
-  font-size: 24px;
+  font-size: 30px;
 }
 .topbar li{
   float:left;
@@ -42,7 +42,7 @@ body{
   position: relative;
 }
 .name{
-
+  font-size: 20px;
   color: white;
 }
 .username, .toplist a{
@@ -109,6 +109,8 @@ body{
 }
 .nav_tabs li{
   padding: 20px 10px;
+  font-size: 15px;
+  font-weight: bold;
 }
 .active{
   background-color: #7761a7;
@@ -132,9 +134,9 @@ body{
   display: inline-block;
   vertical-align: top;
   background-color: white;
-  padding: 2% 7% 10% 7%;
+  padding: 10% 15% 10% 15%;
   height: 400px;
-  float: right !important;
+
 }
 .canvas_contain{
   display: inline-block;
@@ -187,7 +189,7 @@ body{
   height: 300px;
   float:left;
   display:inline;
-  margin-top: 100px;
+  margin-top: 70px;
 
 }
 .twoChart2{
@@ -215,8 +217,10 @@ body{
   margin-top: 1%;
   margin-bottom: 2%;
   background-color: white;
-  width: 1000px;
-  height: 600px;
+  width: 900px;
+  min-height: 400px;
+  height: auto;
+  overflow: auto;
 }
 .contain_map{
   padding-left: 10%;
