--- a/src/public/css/tablestyle.css
+++ b/src/public/css/tablestyle.css
@@ -5135,9 +5135,23 @@ body.modal-open,
 }
 .block-flat,
 .block-wizard {
-  margin-top: 30px;
+  margin-top: 50px;
+  margin-left: 130px;
   margin-bottom: 40px;
   padding: 20px 20px;
+  background: #FFF;
+  border-radius: 3px;
+  position: relative;
+  -webkit-border-radius: 3px;
+  border: 1px solid #efefef;
+  box-shadow: 0 1px 0 0 rgba(0, 0, 0, 0.04);
+  transition: padding 500ms;
+  -moz-transition: padding 500ms;
+  -webkit-transition: padding 500ms;
+}
+.block-flat2,
+.block-wizard2 {
+
   background: #FFF;
   border-radius: 3px;
   position: relative;
