--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -160,7 +160,7 @@ html(class="no-js", lang="")
               each itemm3 in month
                 option(value=itemm3) #{itemm3}
           #submit3.submitBtn 生成
-          div(id='container',style='min-width:400px;height:400px')
+          div(id='container')
         div(class='canvas_contain col-lg-10',id='cbrand_table')(style='display:none')
           .row
             .col-md-12
@@ -267,41 +267,41 @@ html(class="no-js", lang="")
                 span 8.HTML/HTML5
                 progress(value="20" max="100")
                 span 9.HTML/HTML5
-    script(src="js/choose.js")
-    script(src="lib/timejquery.js")
-    script(src="js/index.js")
-    script(src="lib/echarts-all-3.js")
-    script(src="lib/dataTool.min.js")
-    script(src="lib/china.js")
-    script(src="lib/world.js")
-    script(src="lib/api")
-    script(src="lib/bmap.min.js")
-    script(src="js/ScatterMap.js")
-    script(src="lib/bootstrap.min.js")
-    script(src="js/pieChart.js")
-    script(src="lib/echarts.min.js")
-    script(src="lib/d3.min.js")
-    script(src="js/MutiBarChart.js")
-    script(src="js/tablecolor.js")
-    script(src="lib/jquery.jeditable.mini.js")
-    script(src="lib/jquery.datatables.min.js")
-    script(src="lib/datatables.js")
-    script(src="js/datatable.js")
-    script(src="js/dynamic.js")
-    script(src="js/click.js")
-    script(src="lib/highcharts.js")
-    script(src="js/barChart.js")
-    script(src="js/percentagepile.js")
-    script(src="js/fullwidthchart.js")
-    script(src="js/weather.js")
-    script(src="lib/jPushMenu.js")
-    script(src="lib/jquery.cookie.js")
-    script(src="lib/jquery.nanoscroller.js")
-    script(src="libe/jquery.sparkline.min.js")
-    script(src="lib/jquery-ui.js")
-    script(src="lib/jquery.gritter.js")
-    script(src="lib/core.js")
-    script(src="lib/skycons.js")
+  script(src="js/choose.js")
+  script(src="lib/timejquery.js")
+  script(src="js/index.js")
+  script(src="lib/echarts-all-3.js")
+  script(src="lib/dataTool.min.js")
+  script(src="lib/china.js")
+  script(src="lib/world.js")
+  script(src="lib/api")
+  script(src="lib/bmap.min.js")
+  script(src="js/ScatterMap.js")
+  script(src="lib/bootstrap.min.js")
+  script(src="js/pieChart.js")
+  script(src="lib/echarts.min.js")
+  script(src="lib/d3.min.js")
+  script(src="js/MutiBarChart.js")
+  script(src="js/tablecolor.js")
+  script(src="lib/jquery.jeditable.mini.js")
+  script(src="lib/jquery.datatables.min.js")
+  script(src="lib/datatables.js")
+  script(src="js/datatable.js")
+  script(src="js/dynamic.js")
+  script(src="js/click.js")
+  script(src="js/barChart.js")
+  script(src="js/PercentagePile.js")
+  script(src="js/fullwidthchart.js")
+  script(src="js/weather.js")
+  script(src="lib/jPushMenu.js")
+  script(src="lib/jquery.cookie.js")
+  script(src="lib/jquery.nanoscroller.js")
+  script(src="libe/jquery.sparkline.min.js")
+  script(src="lib/jquery-ui.js")
+  script(src="lib/jquery.gritter.js")
+  script(src="lib/core.js")
+  script(src="lib/skycons.js")
+
 
 
 
