--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -187,7 +187,7 @@ html(class="no-js", lang="")
               each itemm3 in month
                 option(value=itemm3) #{itemm3}
           #submit3.submitBtn 生成
-          div(id='container',style='min-width:400px;height:400px')
+          div(id='container')
         div(class='canvas_contain col-lg-10',id='cbrand_table')(style='display:none')
           .row
             .col-md-12
