--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -281,37 +281,41 @@ html(class="no-js", lang="")
         .contain_rank
           div(class=['col-md-6','left-about']) <!-- 外框，图表框宽度暂且设定的是90%，具体看效果再调 -->
             .sales_ranking1
-              h4 Rinking
+              h4 预测销售额排行
               #skills
                 progress(value="100" max="100" id='rank_value1')
                 span#rank_name1 1.HTML/HTML5
+                p#rank_num1
                 progress(value="85" max="100" id='rank_value2')
                 span#rank_name2 2.CSS/CSS3
+                p#rank_num2
                 progress(value="75" max="100" id='rank_value3')
                 span#rank_name3 3.Photoshop / IlLustrator
+                p#rank_num3
                 progress(value="65" max="100" id='rank_value4')
                 span#rank_name4 4.Photoshop / IlLustrator
+                p#rank_num4
                 progress(value="52" max="100" id='rank_value5')
                 span#rank_name5 5.HTML/HTML5
+                p#rank_num5
                 progress(value="44" max="100" id='rank_value6')
                 span#rank_name6 6.HTML/HTML5
+                p#rank_num6
                 progress(value="33" max="100" id='rank_value7')
                 span#rank_name7 7.HTML/HTML5
+                p#rank_num7
                 progress(value="22" max="100" id='rank_value8')
                 span#rank_name8 8.HTML/HTML5
+                p#rank_num8
                 progress(value="20" max="100" id='rank_value9')
                 span#rank_name9 9.HTML/HTML5
+                p#rank_num9
 
   script(src="js/choose.js")
   script(src="lib/timejquery.js")
   script(src="js/index.js")
   script(src="lib/echarts-all-3.js")
   script(src="lib/dataTool.min.js")
-  script(src="lib/china.js")
-  script(src="lib/world.js")
-  script(src="lib/api")
-  script(src="lib/bmap.min.js")
-  script(src="js/ScatterMap.js")
   script(src="lib/bootstrap.min.js")
   script(src="js/pieChart.js")
   script(src="lib/echarts.min.js")
@@ -339,13 +343,6 @@ html(class="no-js", lang="")
   script(src="js/choose.js")
   script(src="lib/timejquery.js")
   script(src="js/index.js")
-  script(src="lib/echarts-all-3.js")
-  script(src="lib/dataTool.min.js")
-  script(src="lib/china.js")
-  script(src="lib/world.js")
-  script(src="lib/api")
-  script(src="lib/bmap.min.js")
-  script(src="js/ScatterMap.js")
   script(src="lib/bootstrap.min.js")
   script(src="js/pieChart.js")
   script(src="lib/echarts.min.js")
@@ -370,6 +367,13 @@ html(class="no-js", lang="")
   script(src="lib/jquery.gritter.js")
   script(src="lib/core.js")
   script(src="lib/skycons.js")
+  script(src="lib/echarts-all-3.js")
+  script(src="lib/dataTool.min.js")
+  script(src="lib/china.js")
+  script(src="lib/world.js")
+  script(src="lib/api")
+  script(src="lib/bmap.min.js")
+  script(src="js/ScatterMap.js")
 
 
 
