--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -58,12 +58,13 @@ html(class="no-js", lang="")
         div(class='canvas_contain col-lg-10',id='barCanvas')
           .contain_title
             span 品牌销售额
-          -var year = ['2013','2014','2015']
+          -var year = ['2012','2013','2014','2015']
           -var month = ['1月','2月','3月','4月','5月','6月','7月','8月','9月','10月','11月','12月']
           label#yearSelect.yearSelect
             select#yearselection.selection
               each itemy in year
                 option(value=itemy) #{itemy}
+              option(selected="selected") 2016
           label#monthSelect.yearSelect
             select#monthselection.selection
               each itemm in month
@@ -103,6 +104,7 @@ html(class="no-js", lang="")
             select#yearselection2.selection
               each itemy2 in year
                 option(value=itemy2) #{itemy2}
+              option(selected="selected") 2016
           label#monthSelect2.yearSelect
             select#monthselection2.selection
               each itemm2 in month
@@ -182,6 +184,7 @@ html(class="no-js", lang="")
             select#yearselection3.selection
               each itemy3 in year
                 option(value=itemy3) #{itemy3}
+              option(selected="selected") 2016
           #submit3.submitBtn 生成
           div(id='container')
         div(class='canvas_contain col-lg-10',id='cbrand_table')(style='display:none')
@@ -220,6 +223,7 @@ html(class="no-js", lang="")
             select#yearselection4.selection
               each itemy4 in year
                 option(value=itemy4) #{itemy4}
+              option(selected="selected") 2016
           label#monthSelect4.yearSelect
             select#monthselection4.selection
               each itemm4 in month
@@ -273,8 +277,8 @@ html(class="no-js", lang="")
         .contain_weather
           .row
             div(class=['col-md-3', 'col-sm-6'])
-              div(class=['fd-tile', 'tile-green', 'weather'])
-                canvas(id="skychoose",width="100",height="100")
+              div(class=['fd-tile', 'tile-green', 'weather'],id='sky')
+                canvas#skychoose(width="100",height="100")
                 h2#wcity 上海
                 h1#wvalue 9.5°C
       .contain_block2
