modify default value for rank

--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -287,32 +287,32 @@ html(class="no-js", lang="")
             .sales_ranking1
               h4 预测销售额排行
               #skills
-                progress(value="100" max="100" id='rank_value1')
-                span#rank_name1 1.HTML/HTML5
+                progress(value="50.71" max="100" id='rank_value1')
+                span#rank_name1 洗发沐浴
                 p#rank_num1
-                progress(value="85" max="100" id='rank_value2')
-                span#rank_name2 2.CSS/CSS3
+                progress(value="10.19" max="100" id='rank_value2')
+                span#rank_name2 卫生巾/护垫/成人尿裤
                 p#rank_num2
-                progress(value="75" max="100" id='rank_value3')
-                span#rank_name3 3.Photoshop / IlLustrator
+                progress(value="8.32" max="100" id='rank_value3')
+                span#rank_name3 家私/皮具护理品
                 p#rank_num3
-                progress(value="65" max="100" id='rank_value4')
-                span#rank_name4 4.Photoshop / IlLustrator
+                progress(value="7.53" max="100" id='rank_value4')
+                span#rank_name4 香薰用品
                 p#rank_num4
-                progress(value="52" max="100" id='rank_value5')
-                span#rank_name5 5.HTML/HTML5
+                progress(value="6.42" max="100" id='rank_value5')
+                span#rank_name5 纸巾/湿巾
                 p#rank_num5
-                progress(value="44" max="100" id='rank_value6')
-                span#rank_name6 6.HTML/HTML5
+                progress(value="6.01" max="100" id='rank_value6')
+                span#rank_name6 家庭环境清洁剂
                 p#rank_num6
-                progress(value="33" max="100" id='rank_value7')
-                span#rank_name7 7.HTML/HTML5
+                progress(value="4.03" max="100" id='rank_value7')
+                span#rank_name7 驱虫用品
                 p#rank_num7
-                progress(value="22" max="100" id='rank_value8')
-                span#rank_name8 8.HTML/HTML5
+                progress(value="3.57" max="100" id='rank_value8')
+                span#rank_name8 衣物清洁剂/护理剂
                 p#rank_num8
-                progress(value="20" max="100" id='rank_value9')
-                span#rank_name9 9.HTML/HTML5
+                progress(value="3.22" max="100" id='rank_value9')
+                span#rank_name9 室内除臭/芳香用品
                 p#rank_num9
 
   script(src="js/choose.js")
